# Cherries

./: .gitignore  Dockerfile  LICENSE-MIT  README.md
backend/: Cargo.toml
backend/src/: .main.rs.rustfmt  bak.rs  main.rs
common/: Cargo.toml
common/src/: constants.rs  lib.rs
frontend/: Cargo.toml  Trunk.toml  index.html  index.scss
frontend/src/: app.rs  backup.rs  input_form_func_component.rs
