[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.0"
actix-session = {version = "0.7.2", features = ["cookie-session"]}
actix-web-lab = {version = "0.19.1", features= ["spa"]}
derive_more = "0.99.17"
serde = { version = "1.0.152", features = ["derive"] }
common = {path = "../common"}
serde_json = "*"
rand = "0.8.5"
